// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Middleware GRAPHQL_FETCH dispatches queryStarted and packageData 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "query": Object {
          "request": Object {
            "hash": 398953408,
            "ql": "{
        user (id: \\"1\\") {
          id,
          name
        }
      }",
          },
        },
      },
      "type": "QUERY_STARTED",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "entities": Object {
          "User": Array [
            Object {
              "id": "1",
              "name": "Alan",
            },
          ],
        },
        "query": Object {
          "request": Object {
            "hash": 398953408,
            "ql": "{
        user (id: \\"1\\") {
          id,
          name
        }
      }",
          },
          "response": Object {
            "raw": Object {
              "user": Object {
                "id": "1",
                "name": "Alan",
              },
            },
          },
        },
      },
      "type": "DATA_RECEIVED",
    },
  ],
]
`;

exports[`Middleware GRAPHQL_FETCH dispatches queryStarted and queryFailed if query fails 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "query": Object {
          "request": Object {
            "hash": 259749885,
            "ql": "{
        user (badargument: \\"1\\") {
          id,
          name
        }
      }",
          },
        },
      },
      "type": "QUERY_STARTED",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "errors": Array [
          [GraphQLError: Unknown argument "badargument" on field "user" of type "RootQuery".],
        ],
        "query": Object {
          "request": Object {
            "hash": 259749885,
            "ql": "{
        user (badargument: \\"1\\") {
          id,
          name
        }
      }",
          },
        },
      },
      "type": "QUERY_FAILED",
    },
  ],
]
`;
